# ProductLineAnalysis

./: .gitignore  Graph_test.hs  LICENSE.md  LTS.hs  LTS_test.hs  LiftedLTS.hs  LiftedLTS_test.hs  Prop.hs  Prop_test.hs  SPL.hs  SPL_test.hs  Variability.hs  Variability_test.hs  VendingMachine.hs  WashingMachine.hs  WashingMachineLifted.hs
FTS/: FTS.cabal  stack.yaml
SPL/: SPL.cabal  stack.yaml
SPL/bench/: List_bench.hs
SPL/profiles/: baseline.csv  cached.csv  compact-cached.csv  compact-cached2.csv  compact.csv  stats.xlsx
SPL/profiles/2/: spl-bench.prof
SPL/src/: Prop.hs  PropBDD.hs  SPL.hs  VList.hs
SPL/src/Deep/: VList.hs
SPL/src/Shallow/: VList.hs
SPL/test/: SPL_prop.hs  SPL_test.hs  VList_test.hs
haskell/SPL/: SPL.cabal  bench0.prof  package.yaml  prof  stack.yaml
haskell/SPL/.stack-work-profile/install/x86_64-osx/lts-13.10/8.6.3/flag-cache/: SPL-0.1.0.0-4r9HlyAFwhz2Vb4IyzGHCQ  SPL-0.1.0.0-7EAm8K7cadUG9BMDvVycjL  array-0.5.3.0-G9jUVjRAtDbD1j9Dj5Nu9D  binary-0.8.6.0-7ty1srRTDbNBIUkVorUEUQ  binary-0.8.6.0-KgJVTSD2b8RIsRyhbKCLth  bytestring-0.10.8.2-EwC70CrHDQM2foyELbROpN  c2hs-0.28.6  containers-0.5.11.0-AsYWBNH7ahe3VctMPCGOec  containers-0.6.0.1-LIdVcHNDne0KSZvraRxjcT  cudd-0.1.0.4-CPz8bRLJlSRY8UvrBnWMo  deepseq-1.4.4.0-GJ4TKdIzIqD9qN12Y71z3  directory-1.3.3.0-5igxWthAcTkGWq1bQ5O3V1  dlist-0.8.0.5-KywbNQgP5Cj6badyLzIEi3  filepath-1.4.2.1-8vpM2IXSLfHBqDAUich3wV  generic-deriving-1.12.3-6gcLv8Pv4n51miqiyyQ8nT  generic-deriving-1.12.3-HPNV2JYgSXWGq2Xci8wrdP  hashable-1.2.7.0-JysWtpJifw71fj0NnnbRx9  hashable-1.2.7.0-Knq22rfAFHw6fsJizUFkDA  hashtables-1.2.3.1-4EfSXt8iAtjA3FJHGniqBt  hashtables-1.2.3.1-JHKhA78Bjc7JSzbewCRiND  language-c-0.8.2-3Ph4OS2we5NLqz3l3jIoBL  language-c-0.8.2-8DTzMtMvIOkAvhGw3OC0It  mtl-2.2.2-LXWjc55n1YI0yZEXaVCrK  parallel-3.2.2.0-765pwXT38yS44B5VZ4wH0N  parallel-3.2.2.0-CtIpXJRdLj72PaxzmIRNUx  pretty-1.1.3.6-24dm1Dg3IkkE6pWDLs5SCl  primitive-0.6.4.0-EwPMwligzJG9xanCeYqI4Z  process-1.6.5.0-Lq2IOrO4dIU2yzbqdGdyFa  syb-0.7-KRW1LCxdMiCJrmhxCvzo37  text-1.2.3.1-6aqSkinLaXgA76ETXy10nR  text-1.2.3.1-C8QfPuD3Om8GuTZTftfkN5  th-abstraction-0.2.10.0-3lG0YGjh3NBLD3h32X4RVy  th-abstraction-0.2.10.0-8ZOTiPDwsZm1QHrFB97wnG  time-1.8.0.2-5Es8cEDw6uKIPqlmd9DwpS  transformers-0.5.5.0-GpzxZgWw8hw9Sypj2RiUUU  unix-2.7.2.2-1F9K5zmddgYGPXyU0w8VZk  vector-0.12.0.2-uc10Z5R7qQBz1bOzsb0Yj  z3-4.3.1-F80pAyHD7fA3PKPX67ahYp  z3-4.3.1-JZkaQ5TbN1iKSKqglSVW87
haskell/SPL/.stack-work-profile/install/x86_64-osx/lts-13.10/8.6.3/lib/x86_64-osx-ghc-8.6.3/: libHSSPL-0.1.0.0-4r9HlyAFwhz2Vb4IyzGHCQ-ghc8.6.3.dylib  libHSarray-0.5.3.0-G9jUVjRAtDbD1j9Dj5Nu9D-ghc8.6.3.dylib  libHSbinary-0.8.6.0-7ty1srRTDbNBIUkVorUEUQ-ghc8.6.3.dylib  libHSbinary-0.8.6.0-KgJVTSD2b8RIsRyhbKCLth-ghc8.6.3.dylib  libHSbytestring-0.10.8.2-EwC70CrHDQM2foyELbROpN-ghc8.6.3.dylib  libHScontainers-0.5.11.0-AsYWBNH7ahe3VctMPCGOec-ghc8.6.3.dylib  libHScudd-0.1.0.4-CPz8bRLJlSRY8UvrBnWMo-ghc8.6.3.dylib  libHSdeepseq-1.4.4.0-GJ4TKdIzIqD9qN12Y71z3-ghc8.6.3.dylib  libHSdirectory-1.3.3.0-5igxWthAcTkGWq1bQ5O3V1-ghc8.6.3.dylib  libHSdlist-0.8.0.5-KywbNQgP5Cj6badyLzIEi3-ghc8.6.3.dylib  (+23 more)
haskell/SPL/.stack-work-profile/install/x86_64-osx/lts-13.10/8.6.3/pkgdb/: SPL-0.1.0.0-7EAm8K7cadUG9BMDvVycjL.conf  array-0.5.3.0-G9jUVjRAtDbD1j9Dj5Nu9D.conf  binary-0.8.6.0-KgJVTSD2b8RIsRyhbKCLth.conf  bytestring-0.10.8.2-EwC70CrHDQM2foyELbROpN.conf  containers-0.6.0.1-LIdVcHNDne0KSZvraRxjcT.conf  cudd-0.1.0.4-CPz8bRLJlSRY8UvrBnWMo.conf  deepseq-1.4.4.0-GJ4TKdIzIqD9qN12Y71z3.conf  directory-1.3.3.0-5igxWthAcTkGWq1bQ5O3V1.conf  dlist-0.8.0.5-KywbNQgP5Cj6badyLzIEi3.conf  filepath-1.4.2.1-8vpM2IXSLfHBqDAUich3wV.conf  generic-deriving-1.12.3-HPNV2JYgSXWGq2Xci8wrdP.conf  hashable-1.2.7.0-Knq22rfAFHw6fsJizUFkDA.conf  hashtables-1.2.3.1-JHKhA78Bjc7JSzbewCRiND.conf  language-c-0.8.2-8DTzMtMvIOkAvhGw3OC0It.conf  mtl-2.2.2-LXWjc55n1YI0yZEXaVCrK.conf  package.cache  parallel-3.2.2.0-CtIpXJRdLj72PaxzmIRNUx.conf  pretty-1.1.3.6-24dm1Dg3IkkE6pWDLs5SCl.conf  primitive-0.6.4.0-EwPMwligzJG9xanCeYqI4Z.conf  process-1.6.5.0-Lq2IOrO4dIU2yzbqdGdyFa.conf  syb-0.7-KRW1LCxdMiCJrmhxCvzo37.conf  text-1.2.3.1-C8QfPuD3Om8GuTZTftfkN5.conf  th-abstraction-0.2.10.0-3lG0YGjh3NBLD3h32X4RVy.conf  time-1.8.0.2-5Es8cEDw6uKIPqlmd9DwpS.conf  transformers-0.5.5.0-GpzxZgWw8hw9Sypj2RiUUU.conf  unix-2.7.2.2-1F9K5zmddgYGPXyU0w8VZk.conf  vector-0.12.0.2-uc10Z5R7qQBz1bOzsb0Yj.conf  z3-4.3.1-F80pAyHD7fA3PKPX67ahYp.conf
haskell/SPL/.stack-work-profile/install/x86_64-osx/lts-8.0/8.0.2/flag-cache/: SPL-0.1.0.0-1gMIn6ueMVA5fHj2IG3fJG  c2hs-0.28.3  cudd-0.1.0.4-FSAkhUabwhMcZB0faAolK  language-c-0.7.2-HeATqVssqv868Rj2qtuBcS  z3-4.3.1-A3VSiRE95F6LssMMejMUaQ
haskell/SPL/.stack-work-profile/install/x86_64-osx/lts-8.0/8.0.2/pkgdb/: cudd-0.1.0.4-FSAkhUabwhMcZB0faAolK.conf  language-c-0.7.2-HeATqVssqv868Rj2qtuBcS.conf  package.cache  z3-4.3.1-A3VSiRE95F6LssMMejMUaQ.conf
haskell/SPL/bench0/: Bench0.hs
haskell/SPL/profiles/: 6.csv  baseline2.csv  cached2.csv  temp.csv
haskell/SPL/profiles/1/: spl-bench.prof
haskell/SPL/src/: .SPL.hs.swp  DeepTypes.hs  Gen.hs  PresenceCondition.hs  Prop.hs  PropBDD.hs  SPL.hs  ShallowTypes.hs  VPrelude.hs  VPreludeDeep.hs  run
haskell/SPL/src/Deep/: VList.hs.old
haskell/SPL/test/: PresenceCondition_prop.hs  Prop_test.hs  SPL_prop.hs  SPL_test.hs  Tokens.hs
haskell/vcpp/: stack.yaml  vcpp.cabal
haskell/vcpp/app/: Main.hs
haskell/vcpp/src/: cpphs.hs  lexer.hs  lexer.x  macro.hs  vcpp.hs
haskell/vcpp/src/Language/Preprocessor/Cpphs/: CppIfdef.hs  Options.hs  Position.hs  RunCpphs.hs
haskell/vcpp/test/: a.c  a.h  a.h.pth  define1.c  else.expected  include1.c  oneFeat.c  plain.c  runtests
vcpp/: CHANGELOG  Makefile  README  index.html  stack.yaml  vcpp.cabal
vcpp/app/: Main.hs
vcpp/docs/: index.html
vcpp/src/: lexer.x  macro.hs  main.hs  old_lexer.hs  vcpp.hs
vcpp/src/Language/Preprocessor/: Cpphs.hs  Unlit.hs
vcpp/src/Language/Preprocessor/Cpphs/: HashDefine.hs  MacroPass.hs  ReadFirst.hs  Tokenise.hs
vcpp/test/: a.h  else.c  else.expected  emptyhashes  oneFeat.expected  plain.expected  run.sh  splice.c  splice.expected
(+1582 files in other folders)
