name:                SPL
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/var#readme
license:             BSD3
license-file:        LICENSE
author:              Ramy Shahin
maintainer:          r.shahin@computer.org
copyright:           2017 Ramy Shahin
category:            tools
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prop, SPL, Shallow.VList, Deep.VList
  build-depends:       base >= 4.7 && < 5, z3, vector, parallel
  default-language:    Haskell2010

test-suite var-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , var
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/var
