Name: vcpp
Version: 0.1
Copyright: 2004-2012, Malcolm Wallace
License: LGPL
License-File: LICENCE-LGPL
Cabal-Version: >= 1.8
Author: Malcolm Wallace <Malcolm.Wallace@me.com>
Maintainer: Malcolm Wallace <Malcolm.Wallace@me.com>
Homepage: http://haskell.org/cpphs/
Synopsis: A liberalised re-implementation of cpp, the C pre-processor.
Description:
    Cpphs is a re-implementation of the C pre-processor that is both
    more compatible with Haskell, and itself written in Haskell so
    that it can be distributed with compilers.
    .
    This version of the C pre-processor is pretty-much
    feature-complete and compatible with traditional (K&R)
    pre-processors.  Additional features include: a plain-text mode;
    an option to unlit literate code files; and an option to turn
    off macro-expansion.
Category: Development
Build-type: Simple
Extra-Source-Files: README, LICENCE-GPL, LICENCE-commercial, CHANGELOG, docs/cpphs.1, docs/index.html, lexer.x

Library
    hs-source-dirs: src
    Build-Depends: base>3&&<6, Stack, MissingH, SPL, parsec, array
    Exposed-Modules:
        VCPP
    Other-Modules: Lexer
    build-tools: alex

Executable vcpp
    hs-source-dirs: app
    Build-Depends: base>3&&<6, Stack, MissingH, SPL, vcpp
    Main-Is: Main.hs
    Other-Modules:

Source-Repository head
    Type:     darcs
    Location: http://code.haskell.org/cpphs
