name:                SPL
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/var#readme
license:             BSD3
license-file:        LICENSE
author:              Ramy Shahin
maintainer:          r.shahin@computer.org
copyright:           2017 Ramy Shahin
category:            tools
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PropBDD, SPL
 --, Shallow.VList, Deep.VList
  build-depends:       base, cudd, vector, parallel, containers, hashtables, hashable, generic-deriving
  ghc-options:         -O2
  default-language:    Haskell2010

test-suite spl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             SPL_test.hs
  other-modules:       SPL_prop
  build-depends:       base, QuickCheck, SPL
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bench0
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench0
  main-is:             Bench0.hs
  build-depends:       base, SPL
  ghc-options:         -O2 -ddump-inlinings -ddump-rule-firings 
  default-language:    Haskell2010

--benchmark spl-bench 
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      bench
--  main-is:             List_bench.hs
--  build-depends:       base, criterion, random, random-source, SPL
--  ghc-options:         -O2
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/var
