Name: vcpp
Version: 0.1
Copyright: 2017, Ramy Shahin
License: BSD3
Cabal-Version: >= 1.8
Author: Ramy Shahin <r.shahin@computer.org>
Description:
Category: Development
Build-type: Simple

Library
    hs-source-dirs: src
    Build-Depends: base>3&&<6, Stack, MissingH, SPL, parsec, array
    Exposed-Modules:
        Lexer VCPP
    --Other-Modules: Lexer
    --build-tools: alex

Executable vcpp
    hs-source-dirs: app
    Build-Depends: base>3&&<6, Stack, MissingH, SPL, vcpp
    Main-Is: Main.hs
    Other-Modules:
